# planday_project

./: Planday - trial goals exploration.ipynb  README.md  Untitled.ipynb  pyproject.toml
data/: seed_data.yml
marts/: marts.yml  trial_activations.sql  trial_goals.sql
