[project]
name = "my-data-env"
version = "0.1.0"
dependencies = [
    "jupyterlab",
    "notebook",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "plotly",
    "ipywidgets",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "xgboost",
    "lightgbm",
    "catboost",
]
