[project]
name = "my-data-env"
version = "0.1.0"
dependencies = [
    "jupyterlab",
    "notebook",
    "numpy<2.3",
    "shap",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "plotly",
    "ipywidgets",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "xgboost",
    "lightgbm",
    "catboost",
]
